--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,21 +1,3 @@
-#Sat May 16 15:15:23 IDT 2020
-GeneratingAlgorithm=My
-#Sat May 16 15:15:23 IDT 2020
-GeneratingAlgorithm=My
-MaxTreads=5
-#Sat May 16 15:15:23 IDT 2020
-GeneratingAlgorithm=My
-MaxTreads=5
 SearchingAlgorithm=BestFirstSearch
-#Sat May 16 15:15:23 IDT 2020
 GeneratingAlgorithm=My
-MaxTreads=5
-SearchingAlgorithm=BestFirstSearch
-#Sat May 16 15:15:23 IDT 2020
-GeneratingAlgorithm=My
-MaxTreads=5
-SearchingAlgorithm=BestFirstSearch
-#Sat May 16 15:15:23 IDT 2020
-GeneratingAlgorithm=My
-MaxTreads=5
-SearchingAlgorithm=BestFirstSearch
+MaxThreads=7
